[BUG] New Editor Overlap #617

--- a/packages/evershop/src/components/common/form/fields/Editor.scss
+++ b/packages/evershop/src/components/common/form/fields/Editor.scss
@@ -27,3 +27,7 @@ body .codex-editor {
 #rows .draggable-source--is-dragging>* {
   visibility: hidden;
 }
+
+.ce-rawtool__textarea {
+  z-index: 0;
+}
